# modak

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  docker-compose.yml  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  docker.yml  release.yml
docker/: Dockerfile.postgres  Dockerfile.worker  README.md
docker/initdb/: 10-extensions.sql  30-s3-secret.sh
docs/: index.md
docs/assets/css/: extra.css
docs/assets/js/: nav.js
docs/connectors/: index.md  spark.md
docs/getting-started/: architecture.md  concepts.md  contract.md  installation.md  quickstart.md
docs/guides/: aws.md  bulk-ingestion.md  console.md  corrections.md  production.md  reading.md  registering-tables.md  stream-load.md
docs/ingestion/: bulk-ingestion.md  stream-load.md
docs/integrations/: index.md  spark.md  trino.md
docs/modes/: choosing.md  contract.md
docs/operations/: aws.md  console.md  day-2.md  deployment.md  lake-maintenance.md  production.md
docs/reference/: catalog.md  cli.md  configuration.md  metrics.md  seam.md  sql.md
docs/stylesheets/: extra.css
docs/tables/: corrections.md  reading.md  registering-tables.md  storage-profiles.md
example/: Makefile  README.md  ingest.sh  lib.sh  live.sh  run.sh
example/compose/: lakekeeper.yml  modak-embedded.yml  modak-standalone.yml  rustfs-embedded.yml  rustfs.yml  spark.yml  tierdb-embedded.yml  tierdb-standalone.yml  trino.yml
example/compose/spark/: Dockerfile  demo.scala  (+1 more)
example/datasets/: live.sql
example/scenarios/: core.sh  lifecycle.sh  run.sh  spark.sh  timestamptz.sh  trino.sh
example/steps/: 05-stream-load.sh
extension/: Cargo.toml
extension/crates/modak-core/src/: dml.rs  domain.rs  lib.rs  ports.rs  sqlgen.rs
extension/crates/modak-pg/: Cargo.toml
extension/crates/modak-pg/src/: catalog.rs  delta.rs  dml.rs  dml_rewrite.rs  embedded.rs  explain.rs  hook.rs  lib.rs  planner.rs  router.rs  threads.rs
extension/crates/tierdb-core/: Cargo.toml
extension/crates/tierdb-core/src/: dialect.rs  dml.rs  domain.rs  lake.rs  lib.rs  mode.rs  planner.rs  ports.rs  read.rs  sqlgen.rs  table.rs  tier_key.rs
extension/crates/tierdb-pg/: Cargo.toml  tierdb.control
extension/crates/tierdb-pg/src/: catalog.rs  cold_mirror.rs  delta.rs  dml.rs  dml_rewrite.rs  embedded.rs  explain.rs  hook.rs  lake.rs  lib.rs  pin.rs  planner.rs  router.rs  threads.rs
sql/: catalog.sql
worker/: pom.xml
worker/modak-compaction/: pom.xml
worker/modak-connector/: pom.xml
worker/modak-iceberg/: pom.xml
worker/modak-lake/: pom.xml
worker/modak-load/: pom.xml
worker/modak-spark/: pom.xml
worker/modak-tiering/: pom.xml
worker/modak-worker/: pom.xml
worker/tierdb-catalog/: pom.xml
worker/tierdb-cdc/: pom.xml
worker/tierdb-common/: pom.xml
worker/tierdb-compaction/: pom.xml
worker/tierdb-console/: pom.xml
worker/tierdb-iceberg/: pom.xml
worker/tierdb-lake/: pom.xml
worker/tierdb-load/: pom.xml
worker/tierdb-tiering/: pom.xml
worker/tierdb-worker/: pom.xml
(+453 files in other folders)
