[workspace]
resolver = "2"
members = [
    "crates/modak-core",
    "crates/modak-pg",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/addu390/modak"
rust-version = "1.82"

[workspace.dependencies]
modak-core = { path = "crates/modak-core" }
thiserror = "1"
