[workspace]
resolver = "2"
members = [
    "crates/tierdb-core",
    "crates/tierdb-pg",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Modak-Labs/tierdb"
rust-version = "1.82"

[workspace.dependencies]
tierdb-core = { path = "crates/tierdb-core" }
thiserror = "1"
serde_json = "1"
