[package]
name = "modak"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Modak Postgres extension (pgrx): read interception, write routing, read-pin, and the pg_duckdb execution bridge."

[lib]
crate-type = ["cdylib", "lib"]

# pgrx's SQL generator. cargo-pgrx looks for a bin named `pgrx_embed_<package>`.
[[bin]]
name = "pgrx_embed_modak"
path = "./src/bin/pgrx_embed.rs"
doc = false

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
serde_json = "1"
libc = "0.2"
modak-core = { workspace = true }

[dev-dependencies]
pgrx-tests = "=0.16.1"

[package.metadata.pgrx]
# The `modak` extension depends on pg_duckdb for read-path execution.
